Add to recipes/mocoloco.html

--- a/recipes/locomoco.html
+++ b/recipes/locomoco.html
@@ -8,5 +8,25 @@
 </head>
 <body>
   <h1>Loco Moco</h1>
+  <img src="../images/loco.jpg" alt="Loco Moco">
+  <h2>Description</h2>
+  <p>This amazing Hawaiian comfort food classic is made by topping rice with a fried burger, which is then smothered with a rich, brown gravy and finished with a fried egg. Seriously, how did it take until 1949 for someone to think of this combination? We all get hangry sometimes, so whether you're a broke student or an older professional who just wishes you were, this cheap, filling bowl of goodness is the perfect solution. Garnish with green onions.</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Ground beef patty </li>
+    <li>Rice</li>
+    <li>Gravy</li>
+    <li>Egg</li>
+  </ul>
+
+<h4>Steps</h4>  
+  <ol>
+    <li>Heat up the patty, rice and gravy</li>
+    <li>Add the rice to a bowl and set the patty on top</li>
+    <li>Fry an egg and toss that on too</li>
+    <li>Cover it all with gravy</li>
+    <li>Enjoy</li>
+  </ol>
+
 </body>
 </html>
