--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/locomoco.html">Loco Moco</a>
-  
+  <ul>
+    <li><a href="recipes/locomoco.html">Loco Moco</a></li>
+    <li><a href="recipes/milk.html">Chocolate Milk</a></li>
+    <li><a href="recipes/ramen.html">Top Ramen</a></li>
+  </ul>
 </body>
 </html>
