--- a/recipes/milk.html
+++ b/recipes/milk.html
@@ -4,23 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ramen</title>
+  <title>Chocolate Milk</title>
 </head>
 <body>
-  <h1>Loco Moco</h1>
-  <img src="../images/ramen.jpg" alt="Ramen">
+  <h1>Chocolate Milk</h1>
+  <img src="../images/milk.jpg" alt="Chocolate Milk">
   <h2>Description</h2>
   <p>Delicious as is or tossed with your favorite ingredients, Top Ramen® is always a simple pleasure. With reduced sodium content and no added MSG, the great taste you love has been stripped down to its essential noodle goodness. Even vegetarians can enjoy our Soy Sauce and Chili flavors with their favorite toppings.</p>
   <h3>Ingredients</h3>
   <ul>
-    <li>Pack of Top Ramen</li>
-    <li>Water</li>
+    <li>Milk</li>
+    <li>Nestle Quik</li>
   </ul>
 
 <h4>Steps</h4>  
   <ol>
-    <li>Heat up the water</li>
-    <li>Pour the water on the ramen</li>
+    <li>Pour a big glass of milk</li>
+    <li>Shovel a couple of scoops of Nestle Quik into the milk</li>
+    <li>Stir well</li>
     <li>Enjoy</li>
   </ol>
 
