--- a/recipes/milk.html
+++ b/recipes/milk.html
@@ -10,7 +10,7 @@
   <h1>Chocolate Milk</h1>
   <img src="../images/milk.jpg" alt="Chocolate Milk">
   <h2>Description</h2>
-  <p>Delicious as is or tossed with your favorite ingredients, Top Ramen® is always a simple pleasure. With reduced sodium content and no added MSG, the great taste you love has been stripped down to its essential noodle goodness. Even vegetarians can enjoy our Soy Sauce and Chili flavors with their favorite toppings.</p>
+  <p>Chocolate milk is a sweetened chocolate-flavored milk. It can be made by mixing chocolate syrup with milk. It can be purchased pre-mixed with milk or made at home by blending milk with cocoa powder and a sweetener, melted chocolate, chocolate syrup, or a pre-made powdered chocolate milk mix</p>
   <h3>Ingredients</h3>
   <ul>
     <li>Milk</li>
